@@ -1,24 +1,5 @@
 
 apply from: "../gradle/kotlin.gradle"
-apply from: "../gradle/service.gradle"
-
-apply plugin: 'war'
-
-mainClassName = "com.hexagonkt.ExamplesKt"
-
-applicationDefaultJvmArgs = [
-    '-Xms2G',
-    '-Xmx2G',
-    '-XX:+UseNUMA',
-    '-XX:+UseParallelGC',
-    '-XX:+AggressiveOpts'
-]
-
-war {
-    archiveName = "ROOT.war"
-}
-
-installDist.dependsOn 'war'
 
 dependencies {
     compile project(':port_client')
